# CFD_FVM_Solver

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt
example/div/: scalar_fud.cpp  scalar_sud_unstructured.cpp
example/laplacian/: scalar_dirichlet.cpp  scalar_neumann.cpp  vector_laplacian.cpp
example/matrix/: sparse_matrix_access_test.cpp  sparse_matrix_solver_test.cpp
example/simple/: cavity2d_structured.cpp  cavity2d_unstructured.cpp  cavity3d_unstructured.cpp  pitz_daily_steady.cpp
example/source/: heat_source.cpp  source_assembly_test.cpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/FVM/: Div.hpp  DivType.h  Laplacian.hpp  Source.hpp
src/core/Fields/: Field.hpp
src/core/Fields/FieldOperators/: Divergence.hpp  Gradient.hpp
src/core/Geometry/: Mesh.cpp
src/core/Math/: Solver.hpp  SparseMatrix.hpp  interpolation.hpp
src/core/algorithm/SIMPLE/: SIMPLE.hpp  SIMPLE1.hpp
src/core/thread_pool/: threadpool.hpp
tempFile/OpenFOAM_tutorials/cavity2D_4/: cavity2D_4.geo  cavity2D_4.msh
tempFile/OpenFOAM_tutorials/cavity2D_4/constant/polyMesh/: boundary  cellZones  faces  owner  points
tempFile/OpenFOAM_tutorials/cavity2D_4/constant/polyMesh/sets/: fluid
tempFile/OpenFOAM_tutorials/cavity2D_4/system/: controlDict
tempFile/OpenFOAM_tutorials/cavity2D_tri/: cavity2D_tri.geo  cavity2D_tri.msh
tempFile/OpenFOAM_tutorials/cavity2D_tri/constant/polyMesh/: boundary  faces  neighbour  owner  points
tempFile/OpenFOAM_tutorials/cavity2D_tri1/: cavity2D_tri.geo  cavity2D_tri.msh
tempFile/OpenFOAM_tutorials/cavity2D_tri1/constant/polyMesh/: boundary  cellZones  faces  owner
tempFile/OpenFOAM_tutorials/cavity2D_tri1/constant/polyMesh/sets/: fluid
tempFile/OpenFOAM_tutorials/cavity3D_4/: cavity3D.geo  cavity3D.msh
tempFile/OpenFOAM_tutorials/cavity3D_4/constant/polyMesh/: boundary  cellZones  faces  neighbour  owner  points
tempFile/OpenFOAM_tutorials/cavity3D_4/constant/polyMesh/sets/: fluid
